
add_executable(test1 test1.cpp)
target_link_libraries(test1 server_net server_base)

add_executable(test3 test3.cpp)
target_link_libraries(test3 server_net server_base)

add_executable(test07 test07.cpp)
target_link_libraries(test07 server_net server_base)

add_executable(test08 test08.cpp)
target_link_libraries(test08 server_net server_base)
